# EdgeLightingEffect

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt
demo/: CMakeLists.txt
demo/src/: animation-presets.h  background-quad.h  debug-ui.cpp  debug-ui.h  main.cpp  ui-controls.h
docs/: Neon Square — HDR Bloom Post-Process.html  Neon Square — SDF Shader.html  architecture-design.md  coordinate-system.md  directional-glow-shader.md  hdr-bloom-shader.md  neon-square-bloom.html  neon-square-shader.md  neon-square.html
lib/: CMakeLists.txt
lib/capi/: edge-lighting-c.cpp  edge-lighting-c.h
lib/capi/csharp/: README.md
lib/capi/csharp/EdgeLighting.Interop/: EdgeLighting.Interop.csproj  EdgeLighting.cs  Enums.cs  NativeMethods.cs  Structs.cs
lib/capi/csharp/EdgeLighting.Sample/: EdgeLighting.Sample.csproj  Program.cs
lib/include/animation/: animation.h  clock.h  easing-function.h  modulator.h  neon-animations.h
lib/include/core/: config.h  edge-lighting.h
lib/include/gl/: framebuffer.h  gl-header.h  shader-program.h  texture-1d.h  texture-2d.h  texture.h  vertex-array.h
lib/include/renderer/: base-renderer.h  neon-multi-pass-renderer.h  neon-optimized-renderer.h  neon-renderer.h  neon-tuning.h  particle-renderer.h  particles.h  segment-renderer.h  stroke-renderer.h  wireframe-renderer.h
lib/include/util/: color-utils.h  constants.h  contour-tracer.h  geometry-utils.h  gl-header.h  gl-utils.h  log-util.h  path-utils.h  screenshot-util.h  stb-image.h
lib/shaders/: black-rect.frag  debug.vert  edge-glow.frag  edge-glow.vert  neon-blit.frag  neon-blur.frag  neon-fill.frag  neon-glow.frag  neon-gradient.frag  neon-optimized.frag  neon.frag  neon.vert  particle.frag  particle.vert  segment.frag  segment.vert  shaders.h.in  stroke.frag  wireframe.frag  wireframe.vert
lib/src/animation/: animation.cpp  easing-function.cpp
lib/src/core/: edge-lighting.cpp
lib/src/renderer/: neon-multi-pass-renderer.cpp  neon-optimized-renderer.cpp  neon-renderer.cpp  particle-renderer.cpp  particles.cpp  segment-renderer.cpp  stroke-renderer.cpp  wireframe-renderer.cpp
lib/src/util/: contour-tracer.cpp  stb-image.cpp
